Changes towards version 0.3:
- Fixed starship location when being teleported from Procyon to
  the Earth Starbase after the Precursor bomb is installed. - Svdb
- Crew death on planet is now counted properly in all cases (bug #70) -Mika
- Fixed lockup in 'save failed' alert box (bug #397), from ghakko
- Fixed glitch in Pkunk animation (bug #354), from Paxtez
- Fixed Kohr-Ah final defeat message repeating (bug #426) -Mika
- Fix for picking up talking pet after Umgah genocide - from Paxtez
- MinGW compilation fixes - SvdB+Mika
- Bilinear scaler is now faster, has 24bpp mode and uses regions -Alex
- Accept CRLF line endings in .txt and .ts files - SvdB
- Fixed overflow problem with 32bpp bilinear,biadapt,biadv scalers -Mika
- MixSDL now handles resampling correctly (less cracklings);
  added cubic interpolation for high quality mode -Mika
- Removed the redundant "GameExiting" variable -Michael
- Added quit options to ingame menu (bug #409), from Paxtez
- Fix position of blinking save/load in melee (bug #406), from Paxtez
- New packaging/io system. - SvdB
- Exit confirmation dialog is prettier and safer, from Paxtez
- Exiting from the main menu with F10 now exits the game -Michael
- Changed lander speed to 35 FPS, which matches reported 3DO speed 
  (Bug #22) -Michael
- Added a Menu-Delete key for the Super-Melee menu (#123) -Michael
- Added support for positional (stereo) sound effects, currently
  works only with OpenAL -Mika
- Fixed screen transitions from homeworld conversations (bug #348) -Michael
- Fixed Fwiffo join_us_refusals initialization (bug #405) -Mika
- Fix Druuge transactions to not elevate crew costs baselessly (bug #235),
  from ghakko
- Fixed glitches and NULL Stamp draw attempt in menu code (bug #26) -Mika
- Absence of voice files is now automatically detected (bug #309) -Mika
- Fixed Commander Hayes mouth movement before radioactives are given
  (bug #343) -Mika
- Fix glitches in slylandro probe animation (bugs #398, #399), from Paxtez