@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Can use F10 to quit during splash screen as well as main menu -Michael
 - Fixed starship location when being teleported from Procyon to
   the Earth Starbase after the Precursor bomb is installed. - Svdb
 - Crew death on planet is now counted properly in all cases (bug #70) -Mika
